pkg/ibmvpc/examples/experiments_env_all_vpcs.txt
Analysis for VPC test-vpc1-ky
Public Internet (all ranges) => vsi2-ky[10.240.2.4] : All Connections
vsi0-ky[10.240.0.5] => Public Internet (all ranges) : All Connections
vsi0-ky[10.240.0.5] => vsi1-ky[10.240.1.4] : All Connections
vsi0-ky[10.240.0.5] => vsi2-ky[10.240.2.4] : All Connections
vsi1-ky[10.240.1.4] => vsi0-ky[10.240.0.5] : All Connections
vsi1-ky[10.240.1.4] => vsi2-ky[10.240.2.4] : All Connections
vsi2-ky[10.240.2.4] => Public Internet (all ranges) : All Connections
vsi2-ky[10.240.2.4] => vsi0-ky[10.240.0.5] : All Connections
vsi2-ky[10.240.2.4] => vsi1-ky[10.240.1.4] : All Connections

connections are stateful unless marked with *

Analysis for VPC test-vpc2-ky
vsi20-ky[10.240.128.4] => vsi21-ky[10.240.128.5] : All Connections
vsi21-ky[10.240.128.5] => vsi20-ky[10.240.128.4] : All Connections

connections are stateful unless marked with *
